--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,11 @@
-# Production profile - MySQL Database
-spring.datasource.url=${JDBC_URL:jdbc:mysql://localhost:3306/huertohogar}
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:huertohogar}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER:huerto}
+spring.datasource.password=${MYSQL_PASSWORD:huerto123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update # changed from validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Flyway disabled
-spring.flyway.enabled=false
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
