Update config for EC2 production deployment

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,31 @@
+# ===========================================
+# PRODUCCIÓN - MySQL en EC2
+# ===========================================
+
+# Base de datos MySQL
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:huertohogar}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=${MYSQL_USER:huerto}
 spring.datasource.password=${MYSQL_PASSWORD:huerto123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=false
 
+# Flyway - migraciones de BD
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
+# Pool de conexiones (optimizado para t3.micro)
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
+
+# Logging en producción
+logging.level.root=WARN
+logging.level.cl.huertohogar=INFO
+logging.level.org.springframework.web=WARN
