feat: Backend Spring Boot completo con JWT, CRUD, roles y Swagger
- Configuración proyecto Spring Boot 3.4.1 con Java 17
- Conexión a MySQL en EC2 (52.2.172.54) con Flyway migrations
- Modelo de datos: User, Product, Order, OrderItem con relaciones JPA
- Repositorios y servicios con lógica de negocio encapsulada
- API REST versionada (/api/v1/...) con operaciones CRUD
- Swagger/OpenAPI documentación completa
- Autenticación JWT con roles USER/ADMIN
- Spring Security con rutas protegidas y públicas
- CORS configurado para frontend React en S3
- Validaciones con Bean Validation en DTOs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ jwt.secret=${JWT_SECRET:mySuperSecretKeyThatIsLongEnoughForJWT256BitsOrMoreToWor
 jwt.expiration=${JWT_EXPIRATION:86400000}
 
 # CORS - añadir IP de EC2 y dominios de frontend
-cors.allowed-origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000,http://52.2.172.54:8080}
+cors.allowed-origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000,http://52.2.172.54:8080,http://app-react-huerto-s3.s3-website-us-east-1.amazonaws.com}
 
 # API Documentation
 api.server.url.production=${API_URL:http://52.2.172.54:8080}
