--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,14 @@ api.server.url.production=${API_URL:http://52.2.172.54:8080}
 # Logging
 logging.level.cl.huertohogar=${LOG_LEVEL:DEBUG}
 logging.level.org.springframework.security=INFO
+
+# AWS S3 Configuration
+aws.s3.bucket-name=${AWS_S3_BUCKET_NAME:huerto-hogar-documentos}
+aws.s3.region=${AWS_REGION:us-east-1}
+aws.access-key-id=${AWS_ACCESS_KEY_ID:}
+aws.secret-access-key=${AWS_SECRET_ACCESS_KEY:}
+
+# File upload limits
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
