feat: Implementar gestión completa de pedidos para panel admin
✨ Nuevas funcionalidades:
- Endpoint PUT /orders/{id}/status para cambiar estado de pedidos
- Enum OrderStatus con 5 estados: PENDIENTE, CONFIRMADO, ENVIADO, ENTREGADO, CANCELADO
- Validaciones para estados finales (no modificables)

🔧 Mejoras técnicas:
- Unificado Order.java para usar OrderStatus enum separado
- Refactorizado OrderService y OrderController
- Actualizado OrderResponse con estructura mejorada
- Mejorado manejo de errores en DocumentoController y S3Service

🔐 Seguridad:
- Configuración AWS usando variables de entorno
- Actualizado .gitignore para excluir credenciales
- Credenciales removidas de application.properties

✅ Estado: CRUD completo listo para producción

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+# Existing ignores
 HELP.md
 target/
-.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,3 +32,25 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Local environment files
+.env
+.env.local
+.env.*.local
+
+# Scripts with secrets (local only)
+deploy-to-ec2.sh
+update-ec2.sh
+
+# Documentation files (keep them local)
+ADMIN_PANEL_ENDPOINTS.md
+ADMIN_PANEL_QUICK_REFERENCE.md
+BACKEND_API_VALIDATION.md
+FRONTEND_CHECKLIST.md
+FRONTEND_INTEGRATION_GUIDE.md
+POSTMAN_TEST_GUIDE.md
+RESUMEN_EJECUTIVO_PANEL_ADMIN.md
+RESUMEN_PANEL_ADMIN.md
+REST_API_ENDPOINTS.md
+TESTING_SUMMARY.md
+*.postman_collection.json
