--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ aws.secret-access-key=${AWS_SECRET_ACCESS_KEY:}
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Firebase Configuration (para autenticación híbrida)
+firebase.enabled=${FIREBASE_ENABLED:true}
+firebase.credentials.path=${FIREBASE_CREDENTIALS_PATH:firebase-service-account.json}
+firebase.credentials.json=${FIREBASE_CREDENTIALS_JSON:}
